--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
 # Core application
-streamlit==1.34.0
-python-dotenv==1.0.1
+streamlit>=1.34.0
+python-dotenv>=1.0.0
 
 # Data handling
-pandas==2.2.0
-openpyxl==3.1.2
+pandas>=2.0.0
+openpyxl>=3.0.0
 
 # Document processing
-docx2txt==0.8
-Pillow==10.2.0
-pytesseract==0.3.10
-PyPDF2==3.0.1
-python-docx==1.1.0
+docx2txt>=0.8
+Pillow>=10.0.0
+pytesseract>=0.3.10
+PyPDF2>=3.0.0
+python-docx>=1.0.0
 
-# LangChain and RAG components
-langchain==0.1.5
-langchain-openai==0.0.5
-langchain-core==0.1.15
-langchain-community==0.0.16
-faiss-cpu==1.7.4
+# LangChain and RAG components - Fixed dependency conflicts
+langchain>=0.1.0
+langchain-openai>=0.0.5
+langchain-core>=0.1.16
+langchain-community>=0.0.17
+faiss-cpu>=1.7.4
 
 # OpenAI
-openai==1.12.0
+openai>=1.0.0
 
 # For production deployment
-gunicorn==21.2.0
-uvicorn==0.27.1
+gunicorn>=21.0.0
+uvicorn>=0.27.0
